<resources>
    <string name="app_name">CovidTracker</string>
    <string name="header_tile">Title</string>
    <string name="header_subtile">This is our Navegation Drawer</string>
    <string name="dashboard">Dashboard</string>
    <string name="list_test">Test List</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="category_title">Geral</string>
    <string name="battery_low">Only when the battery is low!</string>
    <string name="form_test">Test Form</string>
    <string name="detail_test">Test Detail</string>
    <string name="confirmed">Confirmed Cases</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="hospitalized">Hospitalized</string>
    <string name="hospitalized_icu">Hospitalized ICU</string>
    <string name="saveTestButton">Submit</string>
    <string name="sortDateButton">Sort Date</string>
    <string name="riskButton">No risk</string>
    <string name="testResultLabel">Result</string>
    <string name="testDateLabel">Date</string>
    <string name="testLocalityLabel">Local</string>
    <string name="testDateHint">dd/mm/yyyy</string>
    <string name="testLocalityHint">e.g. Lisbon</string>
    <string name="radio_button_positive">Positive</string>
    <string name="radio_button_negative">Negative</string>
    <string name="field_empty">Required Field</string>
    <string name="registeredTest">Test successfully registered!</string>
    <string name="title_imageResult">Picture Result:</string>
    <string name="title_result">Result:</string>
    <string name="title_local">Local:</string>
    <string name="title_date">Date:</string>
    <string name="title_phoneContacts">Phone Contacts COVID19</string>
    <string name="contact_text1">Line SNS 24 for screening symptoms and clarifying doubts about COVID-19.</string>
    <string name="contact_text2">Social Security Line for clarifications on family assistance, sickness benefits and quarantine.</string>
    <string name="contact_text3">Consular Emergency Office.</string>
    <string name="title_digitalContacts">Digital Contacts COVID19</string>
    <string name="contact_text4">DGS platform for clarifications on COVID-19.</string>
    <string name="contact_text5">SNS 24 channel for clarification of doubts. Do not use for medical diagnosis.</string>
    <string name="contact_text6">Consular Emergency Office.</string>
    <string name="contact_text7">Electronic Journal area dedicated to pandemic legislation.</string>
    <string name="covid19_legislation"><a href="https://dre.pt/legislacao-covid-19">COVID19 Legislation</a></string>
    <string name="plus_icon">Plus Icon</string>
    <string name="icon_do_resultado">Result Icon</string>
    <string name="descripton_image_result">Result Image</string>
    <string name="total_inoculations">Total Inoculations</string>
    <string name="first_inoculation">First Inoculation</string>
    <string name="second_inoculation">Second Inoculation</string>
    <string name="people">People</string>
    <string name="data_from_last_24h">Last 24h</string>
    <string name="vaccines">Vaccines</string>
    <string name="take_picture_button">Take Picture</string>
    <string name="counties">Counties</string>
    <string name="incidence">Cases/100k people: </string>
    <string name="riskLevel">Risk Level: </string>
    <string name="cases14days">Confirmed in the last 14 days: </string>
    <string name="population">Population: </string>
    <string name="ex_cascais_chaves_montijo">Ex.: Cascais, Chaves, Montijo</string>
    <string name="danger_level">Danger Level:</string>
    <string name="search">Search</string>
    <string name="every_level">Every Level</string>
    <string name="or">OR</string>
    <string name="incidence_interval">Incidence interval:</string>
    <string-array name="danger_levels_dropdown">
        <item>Every Level</item>
        <item>Low to Moderate</item>
        <item>Moderate</item>
        <item>High</item>
        <item>Very High</item>
        <item>Extremely High</item>
    </string-array>
</resources>