<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/phoneContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:padding="20dp">

            <TextView
                android:id="@+id/titlePhoneContacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_phoneContacts"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryVariantLight"
                android:textSize="26sp">
            </TextView>

            <TextView
                android:id="@+id/phone1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:text="+351 808 24 24 24"
                android:layout_below="@id/titlePhoneContacts"
                android:textStyle="bold"
                android:textSize="18sp">
            </TextView>

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_text1"
                android:layout_below="@id/phone1"
                android:textSize="18sp">
            </TextView>

            <TextView
                android:id="@+id/phone2"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:text="+351 300 502 502"
                android:layout_below="@id/text1"
                android:textStyle="bold"
                android:textSize="18sp">
            </TextView>

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_text2"
                android:layout_below="@id/phone2"
                android:textSize="18sp">
            </TextView>

            <TextView
                android:id="@+id/phone3"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:text="+351 217929714 +351 961706472"
                android:layout_below="@id/text2"
                android:textStyle="bold"
                android:textSize="18sp">
            </TextView>

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_text3"
                android:layout_below="@id/phone3"
                android:textSize="18sp">
            </TextView>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneContacts"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:layout_marginStart="5dp"
            android:padding="20dp">

            <TextView
                android:id="@+id/titleDigitalContacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_digitalContacts"
                android:textColor="@color/colorPrimaryVariantLight"
                android:textStyle="bold"
                android:textSize="26sp">
            </TextView>

            <TextView
                android:id="@+id/digital1"
                android:autoLink="web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="covid19.min-saude.pt"
                android:layout_below="@id/titleDigitalContacts"
                android:textStyle="bold"
                android:textSize="18sp">
            </TextView>

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_text4"
                android:layout_below="@id/digital1"
                android:textSize="18sp">
            </TextView>

            <TextView
                android:id="@+id/digital2"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:text="atendimento@SNS24.gov.pt"
                android:layout_below="@id/text4"
                android:textStyle="bold"
                android:textSize="18sp">
            </TextView>

            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_text5"
                android:layout_below="@id/digital2"
                android:textSize="18sp">
            </TextView>

            <TextView
                android:id="@+id/digital3"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:text="gec@mne.pt"
                android:layout_below="@id/text5"
                android:textStyle="bold"
                android:textSize="18sp">
            </TextView>

            <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_text6"
                android:layout_below="@id/digital3"
                android:textSize="18sp">
            </TextView>

            <TextView
                android:id="@+id/digital4"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/covid19_legislation"
                android:layout_below="@id/text6"
                android:textStyle="bold"
                android:textSize="18sp">
            </TextView>

            <TextView
                android:id="@+id/text7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_text7"
                android:layout_below="@id/digital4"
                android:textSize="18sp">
            </TextView>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>

